feat: Upstage Solar AI -> 로컬 LLM(Ollama)으로 전환 및 모델 선택 UI 추가

--- a/.env.local.example
+++ b/.env.local.example
@@ -15,5 +15,6 @@ NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
 NEXT_PUBLIC_TEACHER_PASSWORD=teacher1234
 NEXT_PUBLIC_TEACHER_ID=default_teacher_id
 
-# Upstage API Configuration (알림장 AI 요약 기능)
-NEXT_PUBLIC_UPSTAGE_API_KEY=your_upstage_api_key_here
+# Local LLM (Ollama) API Configuration (알림장 AI 요약 기능)
+# api.alluser.site Nginx 프록시를 통해 로컬 Ollama 서버에 접근
+NEXT_PUBLIC_OLLAMA_API_KEY=your_ollama_api_key_here
