Add authentication system with Firebase and NEIS API

--- a/.env.local.example
+++ b/.env.local.example
@@ -18,3 +18,7 @@ NEXT_PUBLIC_TEACHER_ID=default_teacher_id
 # Local LLM (Ollama) API Configuration (알림장 AI 요약 기능)
 # api.alluser.site Nginx 프록시를 통해 로컬 Ollama 서버에 접근
 NEXT_PUBLIC_OLLAMA_API_KEY=your_ollama_api_key_here
+
+# NEIS 학교 검색 API (회원가입 시 학교 검색)
+# https://open.neis.go.kr 에서 인증키 발급
+NEXT_PUBLIC_NEIS_API_KEY=your_neis_api_key_here
